fixed discovery call button collapse on mobile view

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -19,10 +19,10 @@
 */
 .hero__book {
   position: absolute;
-  left: 40.9%;
-  top: 61.2%;
-  width: 18.4%;
-  height: 7.1%;
+  left: 39.6%;
+  top: 59.7%;
+  width: 20.9%;
+  height: 10.1%;
   z-index: 2;
 
   display: flex;
